<package format="3">
  <name>behaviortree_ros2</name>
  <version>0.0.1</version>
  <description>
  This package provides a ROS2 wrapper, on top of BehaviorTree.CPP.
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>
  <license>MIT</license>
  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libboost-dev</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>behaviortree_cpp</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>lifecycle_msgs</build_depend>

  <exec_depend>libboost-dev</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>behaviortree_cpp</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

<export>
  <build_type>ament_cmake</build_type>
</export>

</package>
